5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1646_651.log
== TEST (2019-04-22 20:47:07) 
-- CODE:
altura = float(input("Digite a altura: "))
sexo = input("Digite o sexo: ")

if(sexo.upper() == M):
	ideal = (72.7*altura) - 58

else:
	ideal = (62.1*altura) - 44.7
	
print round(ideal, 2)
-- ERROR:
File "XXXX", line 10
    print round(ideal, 2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:48:42) 
-- CODE:
altura = float(input("Digite a altura: "))
sexo = input("Digite o sexo: ")

if(sexo == M):
	ideal = (72.7*altura) - 58

else:
	ideal = (62.1*altura) - 44.7
	
print round(ideal, 2)
-- ERROR:
File "XXXX", line 10
    print round(ideal, 2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:49:23) 
-- CODE:
altura = float(input("Digite a altura: "))
sexo = input("Digite o sexo: ")

if(sexo == M):
	ideal = ((72.7*altura) - 58)

else:
	ideal = ((62.1*altura) - 44.7)
	
print round(ideal, 2)
-- ERROR:
File "XXXX", line 10
    print round(ideal, 2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:49:44) 
-- CODE:
altura = float(input("Digite a altura: "))
sexo = input("Digite o sexo: ")

if(sexo == M):
	ideal = ((72.7*altura) - 58)

else:
	ideal = ((62.1*altura) - 44.7)
	
print (round(ideal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:50:08) 
-- CODE:
altura = float(input("Digite a altura: "))
sexo = input("Digite o sexo: ")

if(sexo.upper() == M):
	ideal = ((72.7*altura) - 58)

else:
	ideal = ((62.1*altura) - 44.7)
	
print (round(ideal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:50:36) 
-- CODE:
altura = float(input("Digite a altura: "))
sexo = input("Digite o sexo: ")

if(sexo.upper() == M):
	ideal = ((72.7*altura) - 58)

else:
	ideal = ((62.1*altura) - 44.7)
	
print (round(ideal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:50:54) 
-- CODE:
altura = float(input("Digite a altura: "))
sexo = input("Digite o sexo: ")

if(sexo.upper() == M):
	ideal = ((72.7*altura) - 58)

else:
	ideal = ((62.1*altura) - 44.7)
	
print (round(ideal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:51:20) 
-- CODE:
altura = float(input("Digite a altura: "))
sexo = input("Digite o sexo: ")

if(sexo == M):
	ideal = ((72.7*altura) - 58)

else:
	ideal = ((62.1*altura) - 44.7)
	
print (round(ideal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
